--- a/exp4.ipynb
+++ b/exp4.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "# Image transformations\n",
     "\n",
-    "**Name:** Priyanka K\n",
+    "**Name:** vinodhini k\n",
     "    \n",
-    "**Reg No:** 212223230162\n",
+    "**Reg No:** 212223230245\n",
     "    \n",
-    "**Slot:** 4I5-2"
+    "**Slot:** 4I1-D"
    ]
   },
   {
